# G-Remover-backend

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  test_onnx.rs
assets/: .gitkeep
src/: config.rs  errors.rs  main.rs  state.rs
src/middleware/: mod.rs  rate_limit.rs
src/models/: user.rs
src/routes/: auth.rs  mod.rs  remove.rs
